Changes from jTDS 0.9
=========================

10/12/2004 - Alin Sinpalean
 o Applied Mike's fix for bug [1042272] jTDS doesn't allow null value into
   Boolean. Also fixed the broken test for this bug.

10/10/2004 - Alin Sinpalean
 o Applied patch [1038937] Support for XA connections. Mike strikes again! :o)
 o Added a test for bug [1042272] jTDS doesn't allow null value into Boolean.
   Haven't had the time to look into it, but it's good to have the failing test
   as a reminder.

10/08/2004 - Alin Sinpalean
 o Added checkClosed() calls to JtdsPreparedStatement.setObjectBase(),
   getParameterMetaData() and getMetaData(), which were all using the
   connection object and could cause NPEs if the statement was closed.

10/07/2004 - Alin Sinpalean
 o Applied patch [1040214] "Changes to allow use of default charset", with a
   number of minor modifications, including always throwing an SQLException if
   the charset cannot be determined or loaded.
 o Implemented support for SQL Server 2000 collations. The default charset is
   now determined from the collation in the ENVCHANGE packets sent by the
   server. Still need to extend this support for collations preceding column
   and output parameter descriptions.
 o Cleaned up and fixed some of the unit tests.

10/05/2004 - Alin Sinpalean
 o Corrected bug [1040475] Possible bug when converting to and from datetime.
   SQL Server seems to accept datetime values outside the 1753-9999 range as
   long as they are submitted as SYBDATETIME values and not as Strings and they
   are read back just fine. Weird.

10/04/2004 - Alin Sinpalean
 o Corrected a bug in TdsCore causing "java.sql.SQLException: Output parameters
   have not yet been processed. Call getMoreResults()." to be thrown with
   Sybase.
 o Added a lot of LCID and sort order information to Charsets.properties (I
   hope all of it) in preparation for collation support for TDS 8.0.
 o Corrected bug [1039876] MS SQL JtdsResultSet.isAfterLast() always returns